updated logo to svg, updated heading-tags, updated styling of other news, made header sticky, added media queries

--- a/code/index.html
+++ b/code/index.html
@@ -13,13 +13,14 @@
 <body>
   <header>
     <!-- Some kind of logo and navbar -->
-    <img class="logo" src="ripe-bananas-logo.png">
+    <h1>ripe bananas</h1>
+    <img class="logo" src="banana-logo.svg">
     <nav>
-      <a href="#">...</a>
-      <a href="#">...</a>
-      <a href="#">...</a>
-      <a href="#">...</a>
+      <a href="#">Start</a>
+      <a href="#">More</a>
+      <a href="#">Credit</a>
     </nav>
+
   </header>
 
   <!-- The big news content -->
@@ -27,7 +28,7 @@
   <section class="big-news">
     <img class="image-big-news" src="banana-pink.jpg">
     <section class="big-news-text">
-      <h1>Colombia declares national emergency</h1>
+      <h2>Colombia declares national emergency</h2>
       <p class="big-news-paragraph">Fungus devastating banana crops found &#62;</p>
     </section>
   </section>
@@ -38,42 +39,42 @@
     <section class="small-news-card">
       <a href="#">
         <img class="image-small-news" src="banana-monkey.jpg">
-        <h2>Small 1</h2>
+        <h3>Small 1</h3>
         <p class="small-news-paragraph">bla bla bla bla bla bla bla bla bla bla bla</p>
       </a>
       <a href="#">
         <img class="image-small-news" src="banana-tape.jpg">
-        <h2>Small 2</h2>
+        <h3>Small 2</h3>
         <p class="small-news-paragraph">bla bla bla bla bla bla bla bla bla bla bla</p>
       </a>
       <a href="#">
         <img class="image-small-news" src="banana-plant.jpg">
-        <h2>Small 3</h2>
+        <h3>Small 3</h3>
         <p class="small-news-paragraph">bla bla bla bla bla bla bla bla bla bla bla</p>
       </a>
       <a href="#">
         <img class="image-small-news" src="banana-plate.jpg">
-        <h2>Small 4</h2>
+        <h3>Small 4</h3>
         <p class="small-news-paragraph">bla bla bla bla bla bla bla bla bla bla bla</p>
       </a>
       <a href="#">
         <img class="image-small-news" src="banana-ripe.jpg">
-        <h2>Small 5</h2>
-        <p class="small-news-paragraph">bla bla bla bla bla bla bla bla bla bla bla</p>
-      </a>
-      <a href="#">
-        <img class="image-small-news" src="travel.jpg">
-        <h2>Small 6</h2>
-        <p class="small-news-paragraph">bla bla bla bla bla bla bla bla bla bla bla</p>
-      </a>
-      <a href="#">
-        <img class="image-small-news" src="banana-leaf.jpg">
-        <h2>Small 7</h2>
+        <h3>Small 5</h3>
         <p class="small-news-paragraph">bla bla bla bla bla bla bla bla bla bla bla</p>
       </a>
       <a href="#">
         <img class="image-small-news" src="banana-pile.jpg">
-        <h2>Small 8</h2>
+        <h3>Small 6</h3>
+        <p class="small-news-paragraph">bla bla bla bla bla bla bla bla bla bla bla</p>
+      </a>
+      <a href="#">
+        <img class="image-small-news" src="banana-leaf.jpg">
+        <h3>Small 7</h3>
+        <p class="small-news-paragraph">bla bla bla bla bla bla bla bla bla bla bla</p>
+      </a>
+      <a href="#">
+        <img class="image-small-news" src="travel.jpg">
+        <h3>Small 8</h3>
         <p class="small-news-paragraph">bla bla bla bla bla bla bla bla bla bla bla</p>
       </a>
     </section>
