--- a/code/index.html
+++ b/code/index.html
@@ -12,22 +12,20 @@
 </head>
 
 <body>
-  <div class="sidebar-flex">
-    <aside class="sidebar">
-      <a href="https://www.facebook.com/">
-        <img src="https://img.icons8.com/nolan/64/facebook-circled.png">
-      </a>
-      <a href="https://twitter.com/">
-        <img src="https://img.icons8.com/nolan/64/twitter.png">
-      </a>
-      <a href="https://www.pinterest.com/">
-        <img src="https://img.icons8.com/nolan/64/pinterest.png">
-      </a>
-      <a href="#top">
-        <img src="https://img.icons8.com/nolan/64/double-up.png">
-      </a>
-    </aside>
-  </div>
+  <aside>
+    <a target="_blank" href="https://www.facebook.com/">
+      <img src="https://img.icons8.com/nolan/64/facebook-circled.png">
+    </a>
+    <a target="_blank" href="https://twitter.com/">
+      <img src="https://img.icons8.com/nolan/64/twitter.png">
+    </a>
+    <a target="_blank" href="https://www.pinterest.com">
+      <img src="https://img.icons8.com/nolan/64/pinterest.png">
+    </a>
+    <a href="#top">
+      <img src="https://img.icons8.com/nolan/64/double-up.png">
+    </a>
+  </aside>
 
   <div class="body">
     <header>
