refactored mobil, tablet and started with desktop layout

--- a/code/index.html
+++ b/code/index.html
@@ -19,33 +19,33 @@
       <ul>
 
         <li class="nav-item exclude-mobile exclude-desktop">
-          <a href="http://" target="_blank" rel="noopener noreferrer">link 1</a>
+          <a href="http://" target="_blank" rel="noopener noreferrer">Fresh</a>
         </li>
 
         <li class="nav-item exclude-mobile exclude-desktop">
-          <a href="http://" target="_blank" rel="noopener noreferrer">link 2</a>
+          <a href="http://" target="_blank" rel="noopener noreferrer">Funny</a>
         </li>
 
-        <li class="nav-item">
+        <li class="">
           <a href="http://" target="_blank" rel="noopener noreferrer">
             <img src="../img/clickbait.jpg" alt="">
           </a>
         </li>
 
         <li class="nav-item exclude-mobile">
-          <a href="http://" target="_blank" rel="noopener noreferrer">link 3</a>
+          <a href="http://" target="_blank" rel="noopener noreferrer">Awesome</a>
         </li>
 
         <li class="nav-item exclude-mobile">
-          <a href="http://" target="_blank" rel="noopener noreferrer">link 4</a>
+          <a href="http://" target="_blank" rel="noopener noreferrer">Meme</a>
         </li>
 
         <li class="nav-item exclude-mobile exclude-tablet">
-          <a href="http://" target="_blank" rel="noopener noreferrer">link 5</a>
+          <a href="http://" target="_blank" rel="noopener noreferrer">Fresh</a>
         </li>
 
         <li class="nav-item exclude-mobile exclude-tablet">
-          <a href="http://" target="_blank" rel="noopener noreferrer">link 6</a>
+          <a href="http://" target="_blank" rel="noopener noreferrer">Funny</a>
         </li>
 
       </ul>
@@ -72,8 +72,13 @@
       <a href="http://" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
         <article>
           <img src="../img/RM.jpeg" alt="">
-          <h3 class="small-h3">You decide</h3>
+          <h3 class="small-h3">You vote matters!</h3>
           <p class="small-text">Family guy or simpsons? </p>
+          <ul class="small-tag">
+            <li>Funny</li>
+            <li>Fresh</li>
+            <li>Vote</li>
+          </ul>
         </article>
       </a>
 
@@ -81,23 +86,35 @@
         <article>
           <img src="../img/ernst.jpg" alt="">
           <h3 class="small-h3">Read it all!</h3>
-          <p class="small-text">Ernst best wedding tips! </p>
+          <p class="small-text">Ernst´s private sex tape on the loose </p>
+          <ul class="small-tag">
+            <li>Juicy</li>
+            <li>Clickbait</li>
+          </ul>
         </article>
       </a>
 
       <a href="http://" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
         <article>
-          <img src="../img/DT_2020.jpg" alt="">
-          <h3 class="small-h3">Breaking News!</h3>
-          <p class="small-text">Donalt Trump re-elected! </p>
+          <img src="../img/loket.jpg" alt="">
+          <h3 class="small-h3">WHAT?!</h3>
+          <p class="small-text">Leif "loket" Olsson daiting Bianca´s mother in law! </p>
+          <ul class="small-tag">
+            <li>Gossip</li>
+            <li>Love</li>
+          </ul>
         </article>
       </a>
 
       <a href="http://" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
         <article>
-          <img src="../img/DT_2020.jpg" alt="">
-          <h3 class="small-h3">Breaking News!</h3>
-          <p class="small-text">Donalt Trump re-elected! </p>
+          <img src="../img/insult.jpg" alt="">
+          <h3 class="small-h3">10 people you must insult before you die</h3>
+          <p class="small-text">Nr 3 is legendary. </p>
+          <ul class="small-tag">
+            <li>List</li>
+            <li>Fresh</li>
+          </ul>
         </article>
       </a>
 
