--- a/code/index.html
+++ b/code/index.html
@@ -6,7 +6,6 @@
   <title>Project 2: The News Site</title>
   <link rel="stylesheet" href="./style.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- dont forget the meta tag for responsiveness -->
   <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css?family=Alata&display=swap" rel="stylesheet">
 </head>
@@ -14,6 +13,12 @@
 <body>
 
   <header>
+  <div class="sidebar">
+      <a class="active" a href="https://www.instagram.com/doggosdoingthings" target="_blank">More</a>
+      <a class="active" a href="https://www.linkedin.com/in/beatrice-lundevall-005737197" target="_blank">About</a>
+      <a class="active" a href="https://www.instagram.com/mycorgi.allan" target="_blank">Contact</a>
+    </div>
+
     <h1>
       🐶 Doggos Today 🐶 <br>
       - your pawfect entertainment
@@ -23,26 +28,27 @@
 
 
   <section class="big-news">
-    <img src="allan.jpg" alt="Allan">
+    <img src="allan.jpg" alt="Allan" class="headline">
     <h2>Most Popular Names of 2019</h2>
     <!-- <button>>>></button> -->
   </section>
 
 
   <section class="flex-parent">
-
-    <div class="flex-cutest"><h3>Puppies for Preseident!</h3>
+    <section class="flex-child">
+    <div class="cutest"><h3>Puppies for Preseident!</h3>
     <img src="pupper.jpg" alt="Corgi"></div>
 
-    <div class="flex-puppies"><h3>Cutest of them All?</h3> 
-    <img src="blackdog.jpg" alt="Doggo"></div>
-    
-    <div class="flex-doing"><h3>Doggos Doing Things</h3>
+    <div class="puppies"><h3>Cutest of them All?</h3> 
+    <img src="blackdog.jpg" alt="Doggo"></div></section>
+
+    <section class="flex-child">
+    <div class="doing"><h3>Doggos Doing Things</h3>
     <img src="doing.jpg" alt="Happy">
     </div>
 
-    <div class="flex-snow"><h3>Paws up - for snow</h3>
-    <img src="snowdoggo.jpg" alt="Snow"></div>
+    <div class="snow"><h3>Paws up - for snow</h3>
+    <img src="snowdoggo.jpg" alt="Snow"></div></section>
     <!-- The other news  -->
   </section>
 </body>
