updated entire layout

--- a/code/index.html
+++ b/code/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
   <title>Johanna Åstrand</title>
 </head>
 
@@ -14,9 +15,9 @@
   <header>
     <img src="logo.svg" alt="technigo-logo">
     <nav>
-      <a href="#">PORTFOLIO</a>
-      <a href="#">BLOG</a>
-      <a href="#">CONTACT</a>
+      <a href="#">TOP NEWS</a>
+      <a href="#">LATEST</a>
+      <a href="#">LOCAL</a>
     </nav>
     <div class="hamburger">
       <div></div>
@@ -27,47 +28,62 @@
 
   <section class="main-news-container">
     <section class="container">
-      <img src="main-news-bg.jpeg" alt="nature-img">
-      <div>
-        <h2>LATEST 🔥</h2>
-        <h3>24 WEEKS TECHNIGO BOOTCAMP STARTS NOW! DO YOU WANT TO FOLLOW THE NEWS?</h3>
-        <button>Read more</button>
-      </div>
+      <section class="main-news-cards">
+        <a href="#">
+          <div class="main-news">
+            <img src="main-news-moon.jpeg" alt="moon">
+            <div class="main-news-text">
+              <span class="blinking">
+                <h2>LATEST NEWS 🔥</h2>
+              </span>
+              <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h3>
+              <button class="main-cta">Read more</button>
+            </div>
+          </div>
+        </a>
+      </section>
     </section>
   </section>
 
 
   <section class="grid-news-container">
+    <p>MORE NEWS:</p>
     <section class="container">
       <section class="news-cards">
         <a href="#">
           <img src="grid-news-bg.jpeg" alt="grid-img">
           <h4>EVERY DAY CODING</h4>
+          <h5>EVERY DAY CODING</h5>
+          <button>Read more</button>
+        </a>
+        <a href="#">
+          <img src="splash-bg.jpeg" alt="grid-img">
+          <h4>EVERY DAY CODING</h4>
+          <h5>EVERY DAY CODING</h5>
           <button>Read more</button>
         </a>
         <a href="#">
           <img src="grid-news-bg.jpeg" alt="grid-img">
           <h4>EVERY DAY CODING</h4>
+          <h5>EVERY DAY CODING</h5>
+          <button>Read more</button>
+        </a>
+        <a href="#">
+          <img src="splash-bg.jpeg" alt="grid-img">
+          <h4>EVERY DAY CODING</h4>
+          <h5>EVERY DAY CODING</h5>
           <button>Read more</button>
         </a>
         <a href="#">
           <img src="grid-news-bg.jpeg" alt="grid-img">
           <h4>EVERY DAY CODING</h4>
+          <h5>EVERY DAY CODING</h5>
           <button>Read more</button>
         </a>
         <a href="#">
-          <img src="grid-news-bg.jpeg" alt="grid-img">
+          <img src="splash-bg.jpeg" alt="grid-img">
           <h4>EVERY DAY CODING</h4>
-          <button>Read more</button>
-        </a>
-        <a href="#">
-          <img src="grid-news-bg.jpeg" alt="grid-img">
-          <h4>EVERY DAY CODING</h4>
-          <button>Read more</button>
-        </a>
-        <a href="#">
-          <img src="grid-news-bg.jpeg" alt="grid-img">
-          <h4>EVERY DAY CODING</h4>
+          <h5>EVERY DAY CODING</h5>
           <button>Read more</button>
         </a>
       </section>
@@ -75,7 +91,6 @@
   </section>
 
   <footer>
-    <i class="fab fa-linkedin"></i>
   </footer>
 </body>
 
