the big news and the small news work

--- a/code/index.html
+++ b/code/index.html
@@ -6,6 +6,7 @@
   <title>Project 2: The News Site</title>
   <link rel="stylesheet" href="./style.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="height=device-height, initial-scale=1">
 
 
   <!-- dont forget the meta tag for responsiveness -->
@@ -32,8 +33,15 @@
     <main>
       <section class="big-news">
         <!-- The big news content -->
-        <img src="#">
 
+        <img
+          src="https://www.nationalgeographic.com/content/dam/news/2018/05/17/you-can-train-your-cat/02-cat-training-NationalGeographic_1484324.jpg"
+          alt="Sorry no picture" class="big-news">
+        <div>
+          <h1 class="item">This is big News WOW!</h1>
+          <p class="item">The world is full of crazy stories. Lorem adipiscing elit. Maecenas sit amet pretium urna.
+            Lorem adipiscing elit. Maecenas sit amet pretium urna.</p>
+        </div>
       </section>
       <section class="row">
 
