refactoring css to use variables

--- a/code/index.html
+++ b/code/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>The ClickBait: &#128240</title>
+    <title>The Clickbait: &#128240</title>
     <link rel="stylesheet" href="./style.css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +10,7 @@
   <body>
     
     <header>
+      <!-- Header nav -->
       <ul>
 
         <li class="nav-item exclude-mobile item-1-order">
@@ -53,7 +54,7 @@
 
 
     <section class="flex-container-small flex-container-medium flex-container-desktop clearfix">
-      <!-- The other news  -->
+      <!-- The small news content  -->
       <a href="http://" class="small-card clearfix" target="_blank" rel="noopener noreferrer">
         <article>
           <img src="../img/RM.jpeg" alt="">
@@ -108,6 +109,10 @@
           <img src="../img/DT_2020.jpg" alt="">
           <h3 class="small-h3">Breaking News!</h3>
           <p class="small-text">Donalt Trump re-elected! </p>
+          <ul class="small-tag">
+            <li>Gossip</li>
+            <li>Love</li>
+          </ul>
         </article>
       </a>
 
@@ -116,6 +121,10 @@
           <img src="../img/DT_2020.jpg" alt="">
           <h3 class="small-h3">Breaking News!</h3 class="small-h3">
           <p class="small-text">Donalt Trump re-elected! </p>
+          <ul class="small-tag">
+            <li>Gossip</li>
+            <li>Love</li>
+          </ul>
         </article>
       </a>
 
@@ -124,6 +133,10 @@
           <img src="../img/DT_2020.jpg" alt="">
           <h3 class="small-h3">Breaking News!</h3>
           <p class="small-text">Donalt Trump re-elected! </p>
+          <ul class="small-tag">
+            <li>Gossip</li>
+            <li>Love</li>
+          </ul>
         </article>
       </a>
 
@@ -132,6 +145,10 @@
           <img src="../img/DT_2020.jpg" alt="">
           <h3 class="small-h3">Breaking News!</h3>
           <p class="small-text">Donalt Trump re-elected! </p>
+          <ul class="small-tag">
+            <li>Gossip</li>
+            <li>Love</li>
+          </ul>
         </article>
       </a>
     </section>
