completely changed the style and idea. since this is the first project i had to do what fest easiest for me and learning by doing.

--- a/code/index.html
+++ b/code/index.html
@@ -3,19 +3,93 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Project 2: The News Site</title>
+  <title>PLANT NEWS</title>
   <link rel="stylesheet" href="./style.css" />
+  <link href="https://fonts.googleapis.com/css?family=Gelasio&display=swap" rel="stylesheet">
   <!-- dont forget the meta tag for responsiveness -->
 </head>
 
 <body>
-  <header>
-    <!-- Some kind of logo and navbar -->
+
+  <!-- Main Content -->
+  <main>
+    <!-- Header -->
+    <header class="header">
+      <h1>
+        🌵 PLANT NEWS
+      </h1>
+      <nav>
+        <a href="#">NEWS</a>
+        <a href="#">PLANT OF THE WEEK</a>
+        <a href="#">WEATHER</a>
+        <a href="#">CONTACT</a>
+      </nav>
+    </header>
+
+    <!-- Hero -->
+    <section class="big-news">
+      Big news
+      <p>
+        <img src="pictures/cactus-farm.jpeg" alt="cactus-farm">
+      </p>
+    </section>
+
+    <!-- Content -->
+    <div class="flex-container wrapper">
+      <section class="content">
+        Content
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sumenda potius quam expetenda. Nihil opus est
+          exemplis
+          hoc facere longius. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sumenda potius quam expetenda.
+          Nihil opus est exemplis
+          hoc facere longius.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sumenda potius quam expetenda.
+          Nihil
+          opus est exemplis
+          hoc facere longius.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sumenda potius quam expetenda.
+          Nihil
+          opus est exemplis
+          hoc facere longius.
+        </p>
+      </section>
+
+      <!-- Sidebar -->
+      <aside class="sidebar">
+        Sidebar
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+      </aside>
+    </div>
+
+    <!-- Footer -->
+    <footer class="footer">
+      Footer
+      <p>
+        Lorem ipsum dolor sit amet
+      </p>
+    </footer>
+
+  </main>
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <!-- <header>
+    Some kind of logo and navbar
 
     <nav>
       <ul class="menu">
         <li class="logo"><a href="#"><img src="logo.svg" alt="technigo-logo"></a></li>
-        <li class="logo">PLANT NEWS</a></li>
+        <li class="logo">PLANT NEWS</li>
         <li class="item"><a href="#">Plant of the week</a></li>
         <li class="item"><a href="#">Succulents</a></li>
         <li class="item"><a href="#">Philodendrons</a></li>
@@ -24,17 +98,10 @@
         <li class="item"><a href="#">Contact</a></li>
       </ul>
     </nav>
-  </header>
+  </header> -->
 
-  <section class="big-news">
 
-    <button>News</button>
-    <!-- The big news content -->
-  </section>
 
-  <section class="">
-    <!-- The other news  -->
-  </section>
 </body>
 
 </html>
