updated header and styling, updated meta tag

--- a/code/index.html
+++ b/code/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html id="top">
 
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width-device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Project 2: The News Site</title>
   <link rel="stylesheet" href="./style.css" />
   <link href="https://fonts.googleapis.com/css?family=Radley|Roboto&display=swap" rel="stylesheet">
@@ -11,16 +11,18 @@
 </head>
 
 <body>
+
   <header>
     <!-- Some kind of logo and navbar -->
-    <h1>ripe bananas</h1>
-    <img class="logo" src="banana-logo.svg">
-    <nav>
-      <a href="#">Start</a>
-      <a href="#">More</a>
-      <a href="#">Credit</a>
+    <h1 class="website-name">ripe bananas</h1>
+    <img class="logo" src="banana-logo.svg" alt="Banana logo">
+    <nav class="navbar-links">
+      <a href="#top">Start</a>
+      <a href="https://www.google.com/search?q=banana+news&rlz=1C1GCEU_svSE866SE866&oq=banana+ne&aqs=chrome.0.69i59j0j69i57j0l5.2752j0j8&sourceid=chrome&ie=UTF-8"
+        target="_blank">More
+      </a>
+      <a href="#bottom">Credit</a>
     </nav>
-
   </header>
 
   <!-- The big news content -->
@@ -90,7 +92,7 @@
     </section>
   </section>
 
-  <footer>
+  <footer id="bottom">
     <p>...</p>
   </footer>
 </body>
