added info in footer and styling, updated font size for small-news-paragraph

--- a/code/index.html
+++ b/code/index.html
@@ -93,7 +93,13 @@
   </section>
 
   <footer id="bottom">
-    <p>...</p>
+    <p class="footer-paragraph">Logo by Freepik from
+      <a class="footer-link" href="https://www.flaticon.com/collections/9330377" target="_blank">Flaticon</a>
+    </p>
+    <p class="footer-paragraph">Pictures from <a class="footer-link" href="https://unsplash.com/"
+        target="_blank">Unsplash</a>
+
+    </p>
   </footer>
 </body>
 
