added images to the folder. started a hamburger menu. working on big-news section

--- a/code/index.html
+++ b/code/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>PLANT NEWS</title>
+  <title>CACTUS NEWS</title>
   <link rel="stylesheet" href="./style.css" />
   <link href="https://fonts.googleapis.com/css?family=Gelasio&display=swap" rel="stylesheet">
   <!-- dont forget the meta tag for responsiveness -->
@@ -16,22 +16,36 @@
     <!-- Header -->
     <header class="header">
       <h1>
-        🌵 PLANT NEWS
+        🌵 CACTUS NEWS
       </h1>
+
+      <div class="hamburger">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+
       <nav>
         <a href="#">NEWS</a>
-        <a href="#">PLANT OF THE WEEK</a>
+        <a href="#">CACTUS OF THE WEEK</a>
         <a href="#">WEATHER</a>
         <a href="#">CONTACT</a>
       </nav>
+
     </header>
 
     <!-- Hero -->
     <section class="big-news">
       Big news
-      <p>
-        <img src="pictures/cactus-farm.jpeg" alt="cactus-farm">
-      </p>
+      <div>
+        <img src="pictures/cactus-farm.jpg" alt="cactus-farm">
+        <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sumenda potius quam expetenda. Nihil opus est
+          exemplis
+          hoc facere longius. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sumenda potius quam expetenda.
+          Nihil opus est exemplis
+          hoc facere longius.Lorem ipsum dolor sit amet.
+        </h2>
+      </div>
     </section>
 
     <!-- Content -->
