--- a/code/index.html
+++ b/code/index.html
@@ -7,91 +7,96 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
-  <title>Johanna Åstrand</title>
+  <link rel="icon"
+    href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/237/avocado_1f951.png">
+  <title>DAILY AVOCADO</title>
 </head>
 
 <body>
 
   <header>
-    <img src="logo.svg" alt="technigo-logo">
-    <nav>
-      <a href="#">TOP NEWS</a>
-      <a href="#">LATEST</a>
-      <a href="#">LOCAL</a>
-    </nav>
+    <img src="/images/logo.svg" alt="technigo-logo">
     <div class="hamburger">
       <div></div>
       <div></div>
       <div></div>
     </div>
+    <div class="avocado">🥑</div>
+    <nav>
+      <a href="https://www.linkedin.com/in/johanna-%C3%A5strand/" target="_blank">RIPE NEWS</a>
+      <a href="https://www.linkedin.com/in/johanna-%C3%A5strand/" target="_blank">AVOCADO TV</a>
+      <a href="https://www.linkedin.com/in/johanna-%C3%A5strand/" target="_blank">RECEPIES</a>
+    </nav>
   </header>
 
+  <div class="latest-news">
+    <div class="latest-news-content">
+      <h2>RIGHT NOW:</h2>
+      <h3>AVOCADOS CAN FLY</h3>
+    </div>
+  </div>
+
+
   <section class="main-news-container">
+    <section class="main-news-cards">
+      <a href="https://www.linkedin.com/in/johanna-%C3%A5strand/" target="_blank">
+        <img src="/images/main-avocado.jpeg" alt="avocado">
+        <h4>EXPERTS: AVOCADOS ARE RUNNING OUT</h4>
+      </a>
+    </section>
+  </section>
+  </section>
+
+  <section class="grid-news-container">
+    <p>🥑 MORE AVOCADO NEWS 🥑</p>
     <section class="container">
-      <section class="main-news-cards">
-        <a href="#">
-          <div class="main-news">
-            <img src="main-news-moon.jpeg" alt="moon">
-            <div class="main-news-text">
-              <span class="blinking">
-                <h2>LATEST NEWS 🔥</h2>
-              </span>
-              <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h3>
-              <button class="main-cta">Read more</button>
-            </div>
-          </div>
+      <section class="news-cards">
+        <a href="https://www.linkedin.com/in/johanna-%C3%A5strand/" target="_blank">
+          <img src="/images/grid-avocado.jpeg" alt="avocado">
+          <h4>THE LAST AVOCADO</h4>
+        </a>
+        <a href="https://www.linkedin.com/in/johanna-%C3%A5strand/" target="_blank">
+          <img src="/images/grid-avocado.jpeg" alt="avocado">
+          <h4>THE LAST AVOCADO</h4>
+        </a>
+        <a href="https://www.linkedin.com/in/johanna-%C3%A5strand/" target="_blank">
+          <img src="/images/grid-avocado.jpeg" alt="avocado">
+          <h4>THE LAST AVOCADO</h4>
+        </a>
+        <a href="https://www.linkedin.com/in/johanna-%C3%A5strand/" target="_blank">
+          <img src="/images/grid-avocado.jpeg" alt="avocado">
+          <h4>THE LAST AVOCADO</h4>
+        </a>
+        <a href="https://www.linkedin.com/in/johanna-%C3%A5strand/" target="_blank">
+          <img src="/images/grid-avocado.jpeg" alt="avocado">
+          <h4>THE LAST AVOCADO</h4>
         </a>
       </section>
     </section>
   </section>
 
-
-  <section class="grid-news-container">
-    <p>MORE NEWS:</p>
+  <section class="other-news-container">
+    <p>🥑 FRESH RECEPIES 🥑</p>
     <section class="container">
-      <section class="news-cards">
-        <a href="#">
-          <img src="grid-news-bg.jpeg" alt="grid-img">
-          <h4>EVERY DAY CODING</h4>
-          <h5>EVERY DAY CODING</h5>
-          <button>Read more</button>
+      <section class="other-news-cards">
+        <a href="https://www.linkedin.com/in/johanna-%C3%A5strand/" target="_blank">
+          <img src="/images/other-avocado.jpeg" alt="avocado">
+          <h4>GUCAMOLE RECEPIE FOR THE WHOLE FAMILY</h4>
         </a>
-        <a href="#">
-          <img src="splash-bg.jpeg" alt="grid-img">
-          <h4>EVERY DAY CODING</h4>
-          <h5>EVERY DAY CODING</h5>
-          <button>Read more</button>
-        </a>
-        <a href="#">
-          <img src="grid-news-bg.jpeg" alt="grid-img">
-          <h4>EVERY DAY CODING</h4>
-          <h5>EVERY DAY CODING</h5>
-          <button>Read more</button>
-        </a>
-        <a href="#">
-          <img src="splash-bg.jpeg" alt="grid-img">
-          <h4>EVERY DAY CODING</h4>
-          <h5>EVERY DAY CODING</h5>
-          <button>Read more</button>
-        </a>
-        <a href="#">
-          <img src="grid-news-bg.jpeg" alt="grid-img">
-          <h4>EVERY DAY CODING</h4>
-          <h5>EVERY DAY CODING</h5>
-          <button>Read more</button>
-        </a>
-        <a href="#">
-          <img src="splash-bg.jpeg" alt="grid-img">
-          <h4>EVERY DAY CODING</h4>
-          <h5>EVERY DAY CODING</h5>
-          <button>Read more</button>
+        <a href="https://www.linkedin.com/in/johanna-%C3%A5strand/" target="_blank">
+          <img src="/images/other-avocado.jpeg" alt="avocado">
+          <h4>GUCAMOLE RECEPIE FOR THE WHOLE FAMILY</h4>
         </a>
       </section>
     </section>
   </section>
 
   <footer>
+    <a href="https://www.linkedin.com/in/johanna-%C3%A5strand/" target="_blank">🥑 FIND ME ON LINKEDIN</a>
+    <a href="https://www.linkedin.com/in/johanna-%C3%A5strand/" target="_blank">🥑 FIND ME ON LINKEDIN</a>
+    <a href="https://www.linkedin.com/in/johanna-%C3%A5strand/" target="_blank">🥑 FIND ME ON LINKEDIN</a>
   </footer>
+
 </body>
 
 </html>
