updated namning on container

--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
     </section>
   </section>
 
-  <section class="other-news-container">
+  <section class="recepies-container">
     <p>🥑 FRESH RECEPIES 🥑</p>
     <section class="container">
-      <section class="other-news-cards">
+      <section class="recepies-cards">
         <a href="https://www.linkedin.com/in/johanna-%C3%A5strand/" target="_blank">
           <img src="/images/other-avocado.jpeg" alt="avocado">
           <h4>GUCAMOLE RECEPIE FOR THE WHOLE FAMILY</h4>
