redid the whole project with new design

--- a/code/index.html
+++ b/code/index.html
@@ -1,138 +1,129 @@
-<!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <meta charset="utf-8" />
-  <title>GLO news</title>
-  <link rel="icon" href="https://img.icons8.com/nolan/64/globe-earth.png" />
-  <link rel="stylesheet" href="./style.css" />
-  <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400&display=swap" rel="stylesheet">
-
-  <!-- dont forget the meta tag for responsiveness -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="style.css">
+  <title>Document</title>
 </head>
 
 <body>
-  <aside>
-    <a target="_blank" href="https://www.facebook.com/">
-      <img src="https://img.icons8.com/nolan/64/facebook-circled.png">
-    </a>
-    <a target="_blank" href="https://twitter.com/">
-      <img src="https://img.icons8.com/nolan/64/twitter.png">
-    </a>
-    <a target="_blank" href="https://www.pinterest.com">
-      <img src="https://img.icons8.com/nolan/64/pinterest.png">
-    </a>
-    <a href="#top">
-      <img src="https://img.icons8.com/nolan/64/double-up.png">
-    </a>
-  </aside>
 
-  <div class="body">
-    <header>
-      <h1><img src="globe.svg" style="margin-right: 15px;"><a href="url">GLO</a> news</h1>
-      <nav class="navbar">
-        <button data-hover="Back at it!">
-          <div>Home</div>
-        </button>
-        <button data-hover="Wiki Glo!">
-          <div>About</div>
-        </button>
-        <button data-hover="Dora!">
-          <div>Explore</div>
-        </button>
-        <button data-hover="Stay fab!">
-          <div>Trends</div>
-        </button>
-        <button data-hover="Wohoo!">
-          <div>Subscribe</div>
-        </button>
-      </nav>
-    </header>
+  <header>
+    <input type="checkbox" class="nav-toggle" id="nav-toggle">
+    <nav>
+      <ul class="nav-links">
+        <li><a href="#">About</a></li>
+        <li><a href="#">Explore</a></li>
+        <li><a href="#">Trends</a></li>
+      </ul>
+    </nav>
+    <label for="nav-toggle" class="nav-toggle-label">
+      <span></span>
+    </label>
+    <h2>Headline with logo</h2>
+    <a href="#"><button>Contact</button></a>
+  </header>
 
-    <main class="main-content">
-      <div class="small-news">
-        <img
-          src="https://images.unsplash.com/photo-1579155373653-589af878c852?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60"
-          alt="">
-      </div>
-      <div class="small-news">
-        <img
-          src="https://images.unsplash.com/photo-1579154545541-1b3d6a0c1579?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=668&q=80"
-          alt="">
-      </div>
-      <div class="small-news">
-        <img
-          src="https://images.unsplash.com/photo-1579155373653-589af878c852?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60"
-          alt="">
-      </div>
-      <div class="small-news">
-        <img
-          src="https://images.unsplash.com/photo-1579154545541-1b3d6a0c1579?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=668&q=80"
-          alt="">
-      </div>
-      <div class="small-news">
-        <img
-          src="https://images.unsplash.com/photo-1579155373653-589af878c852?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60"
-          alt="">
-      </div>
-      <div class="small-news">
-        <img
-          src="https://images.unsplash.com/photo-1579154545541-1b3d6a0c1579?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=668&q=80"
-          alt="">
-      </div>
-      <div class="small-news">
-        <img
-          src="https://images.unsplash.com/photo-1579155373653-589af878c852?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60"
-          alt="">
-      </div>
-      <div class="small-news">
-        <img
-          src="https://images.unsplash.com/photo-1579154545541-1b3d6a0c1579?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=668&q=80"
-          alt="">
-      </div>
-    </main>
+  <figure>
+    <img
+      src="https://images.unsplash.com/photo-1429667947446-3c93a979b7e0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80"
+      alt="">
+  </figure>
 
-    <footer>
-      <div class="top-footer">
-        <div class="top-footer-headers">
-          <h2>Header 1</h2>
-          <ul>
-            <li><a href="url">Examples</a></li>
-            <li><a href="url">Examples</a></li>
-            <li><a href="url">Examples</a></li>
-          </ul>
-        </div>
-        <div class="top-footer-headers">
-          <h2>Header 2</h2>
-          <ul>
-            <li><a href="url">Examples</a></li>
-            <li><a href="url">Examples</a></li>
-            <li><a href="url">Examples</a></li>
-          </ul>
-        </div>
-        <div class="top-footer-headers">
-          <h2>Header 3</h2>
-          <ul>
-            <li><a href="url">Examples</a></li>
-            <li><a href="url">Examples</a></li>
-            <li><a href="url">Examples</a></li>
-          </ul>
-        </div>
-        <div class="top-footer-headers">
-          <h2>Header 4</h2>
-          <ul>
-            <li><a href="url">Examples</a></li>
-            <li><a href="url">Examples</a></li>
-            <li><a href="url">Examples</a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="bottom-footer">
-        <p>&copy Nathalie Rautell</p>
-        <p>Privacy Policy and Cookies Policy</p>
-      </div>
-    </footer>
-  </div>
+  <article>
+    <img
+      src="https://images.unsplash.com/photo-1490059830487-2f86fddb2b4b?ixlib=rb-1.2.1&auto=format&fit=crop&w=2900&q=80">
+  </article>
+
+  <main>
+    <section class="grid">
+
+      <section class="grid-group">
+        <h3>Header</h3>
+        <h4>Smaller header</h4>
+        <img src="https://via.placeholder.com/350">
+        <hr>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat.</p>
+      </section>
+
+      <section class="grid-group">
+        <h3>Header</h3>
+        <h4>Smaller header</h4>
+        <img src="https://via.placeholder.com/350">
+        <hr>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat.</p>
+      </section>
+
+      <section class="grid-group">
+        <h3>Header</h3>
+        <h4>Smaller header</h4>
+        <img src="https://via.placeholder.com/350">
+        <hr>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat.</p>
+      </section>
+
+      <section class="grid-group">
+        <h3>Header</h3>
+        <h4>Smaller header</h4>
+        <img src="https://via.placeholder.com/350">
+        <hr>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat.</p>
+      </section>
+      <section class="grid-group">
+        <h3>Header</h3>
+        <h4>Smaller header</h4>
+        <img src="https://via.placeholder.com/350">
+        <hr>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat.</p>
+      </section>
+
+      <section class="grid-group">
+        <h3>Header</h3>
+        <h4>Smaller header</h4>
+        <img src="https://via.placeholder.com/350">
+        <hr>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat.</p>
+      </section>
+
+      <section class="grid-group">
+        <h3>Header</h3>
+        <h4>Smaller header</h4>
+        <img src="https://via.placeholder.com/350">
+        <hr>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat.</p>
+      </section>
+
+      <section class="grid-group">
+        <h3>Header</h3>
+        <h4>Smaller header</h4>
+        <img src="https://via.placeholder.com/350">
+        <hr>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat.</p>
+      </section>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy <a href="url">Nathalie Rautell</a>, 2020</p>
+  </footer>
 </body>
 
 </html>
