--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,89 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
+<head>
+  <meta charset="utf-8" />
+  <title>Project 2: The News Site</title>
+  <link rel="stylesheet" href="./style.css" />
+  <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Nunito:300,400,700&display=swap" rel="stylesheet">
+  <!-- dont forget the meta tag for responsiveness -->
+</head>
+
+<body>
+  <header>
+    <div class="logo">
+      <img src="img/arctic.svg" alt="logo">
+    </div>
+
+    <h1 class="title">News about stuff</h1>
+
+    <nav>
+      <a href="">Link</a>
+      <a href="">Link</a>
+      <a href="">Link</a>
+    </nav>
+
+  </header>
+
+  <main>
+
+    <section class="article-big">
+      <div class="article-big-img">
+        <div class="ratio"></div>
+        <img src="https://cdn2.webdamdb.com/1280_1eosNM3S2l1e.jpg?1511390572" alt="">
+      </div>
+      <div class="article-big-text">
+        <h2>Featured big article</h2>
+        <p>Fruit flavored crunchy loops colored cereal pour milk. Breakfast hoops sweetened tutti frutti soaked treats.
+          Tasty Froot Loops rainbow liquid spoon happy family Sugar Smacks fruit. <a href=""> –– Read more</a></p>
+      </div>
     </section>
 
-    <section class="">
-      <!-- The other news  -->
+    <section class="articles-grid">
+      <article class="article">
+        <div class="article-img">
+          <div class="ratio"></div>
+          <img src="https://resize.hswstatic.com/w_907/gif/arctic-circle.jpg" alt="">
+        </div>
+        <h3>An article</h3>
+        <p>Bright varieties Toucan Sam blue anthropomorphic kid.</p>
+      </article>
+
+      <article class="article">
+        <div class="article-img">
+          <div class="ratio"></div>
+          <img src="https://quickbutik.imgix.net/7650K/products/5c44a5efa33e4.jpeg" alt="">
+        </div>
+        <h3>An article</h3>
+        <p>Friendly turtle Pop Top fiber snacks nutri-grain.</p>
+      </article>
+
+      <article class="article">
+        <div class="article-img">
+          <div class="ratio"></div>
+          <img
+            src="https://cdn.i-scmp.com/sites/default/files/styles/768x768/public/d8/images/methode/2019/08/02/1274db16-b4e2-11e9-8f9c-a6398a9f90a9_image_hires_164133.jpg?itok=b3-4c4nv&v=1564735299"
+            alt="">
+        </div>
+        <h3>An article</h3>
+        <p>Nice healthy Cheerios multi-grain wheat Cornflakes oat fresh.</p>
+      </article>
+
+      <article class="article">
+        <div class="article-img">
+          <div class="ratio"></div>
+          <img src="https://cdn.pixabay.com/photo/2015/10/12/14/52/arctic-983917_960_720.jpg" alt="">
+        </div>
+        <h3>An article</h3>
+        <p>Junior sweet taste chocolate rings plastic surprise.</p>
+      </article>
     </section>
-  </body>
+
+  </main>
+
+  <footer>
+    Footer
+  </footer>
+</body>
+
 </html>
