fixed spelling mistakes on titles and nav

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <nav>
       <a href="https://www.linkedin.com/in/johanna-%C3%A5strand/" target="_blank">RIPE NEWS</a>
       <a href="https://www.linkedin.com/in/johanna-%C3%A5strand/" target="_blank">AVOCADO TV</a>
-      <a href="https://www.linkedin.com/in/johanna-%C3%A5strand/" target="_blank">RECEPIES</a>
+      <a href="https://www.linkedin.com/in/johanna-%C3%A5strand/" target="_blank">RECIPES</a>
     </nav>
   </header>
 
@@ -76,7 +76,7 @@
   </section>
 
   <section class="other-news-container">
-    <p>🥑 FRESH RECEPIES 🥑</p>
+    <p>🥑 FRESH RECIPES 🥑</p>
     <section class="container">
       <section class="other-news-cards">
         <a href="https://www.linkedin.com/in/johanna-%C3%A5strand/" target="_blank">
