started with header

--- a/code/index.html
+++ b/code/index.html
@@ -7,15 +7,23 @@
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
-    <header>
+    <header class="header">
       <!-- Some kind of logo and navbar -->
+      <img class="logo" src="logo.svg" alt="Technigo logo" />
+      <nav>
+        <a class="order-1" href="#">one</a>
+        <a href="#">two</a>
+        <img class="nav-logo" src="logo.svg" alt="Technigo logo" />
+        <a href="#">three</a>
+        <a class="order-2" href="#">four</a>
+      </nav>
     </header>
 
     <section class="big-news">
       <!-- The big news content -->
     </section>
 
-    <section class="">
+    <section class="news-container">
       <!-- The other news  -->
     </section>
   </body>
