started with header

--- a/code/index.html
+++ b/code/index.html
@@ -9,15 +9,27 @@
 </head>
 
 <body>
-  <header>
+  <header class="header">
     <!-- Some kind of logo and navbar -->
+    <img class="logo" src="logo.svg" alt="Technigo logo">
+    <nav>
+      <a class="order-1" href="#"> one </a>
+      <a href="#"> two </a>
+      <a href="#"> three </a>
+      <a class="order-2" href="#"> four </a>
+      <a href="#"> five </a>
+      <a href="#"> six </a>
+      <a href="#"> seven </a>
+
+    </nav>
+
   </header>
 
   <section class="big-news">
     <!-- The big news content -->
   </section>
 
-  <section class="">
+  <section class="news-container">
     <!-- The other news  -->
   </section>
   <button>click</button>
